update twig templates

--- a/resources/views/home/index.twig
+++ b/resources/views/home/index.twig
@@ -8,6 +8,7 @@
             <h1 class="display-5 fw-bold">{% trans %}Home{% endtrans %}</h1>
             <p class="lead">{% trans %}This is an example page.{% endtrans %}</p>
             <code>resources/views/home/index.twig</code>
+            <h3>Hello {{ name }}</h3>
         </div>
     </div>
 {% endblock %}
