--- a/resources/views/layout.twig
+++ b/resources/views/layout.twig
@@ -13,24 +13,24 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="{{ url_for('home.index') }}">Slim 4 Starter</a>
+                <a class="navbar-brand" href="{{ url_for('home') }}">Slim 4 Starter</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a {{ is_current_url('home.index') ? 'class="nav-link active" aria-current="page"' : 'class="nav-link"' }} href="{{ url_for('home.index') }}">
+                            <a {{ is_current_url('home') ? 'class="nav-link active" aria-current="page"' : 'class="nav-link"' }} href="{{ url_for('home') }}">
                                 {% trans %}Home{% endtrans %}
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a {{ is_current_url('about.index') ? 'class="nav-link active" aria-current="page"' : 'class="nav-link"' }} href="{{ url_for('about.index') }}">
+                            <a {{ is_current_url('about') ? 'class="nav-link active" aria-current="page"' : 'class="nav-link"' }} href="{{ url_for('about') }}">
                                 {% trans %}About{% endtrans %}
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a {{ is_current_url('contact.index') ? 'class="nav-link active" aria-current="page"' : 'class="nav-link"' }} href="{{ url_for('contact.index') }}">
+                            <a {{ is_current_url('contact') ? 'class="nav-link active" aria-current="page"' : 'class="nav-link"' }} href="{{ url_for('contact') }}">
                                 {% trans %}Contact{% endtrans %}
                             </a>
                         </li>
