--- a/resources/views/layout.twig
+++ b/resources/views/layout.twig
@@ -8,6 +8,8 @@
     <title>{% block title %}{% endblock %} - Slim 4 Starter</title>
     <link rel="shortcut icon" href="/assets/img/favicon.ico">
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <script defer src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script defer src="/assets/js/main.js"></script>
 </head>
 <body class="d-flex flex-column h-100">
     <header>
@@ -47,6 +49,5 @@
             <span class="text-muted">&copy; {{ 'now' | date('Y') }}. {% trans %}All rights reserved.{% endtrans %}</span>
         </div>
     </footer>
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
