--- a/resources/views/layout.twig
+++ b/resources/views/layout.twig
@@ -8,6 +8,7 @@
     <title>{% block title %}{% endblock %} - Slim 4 Starter</title>
     <link rel="shortcut icon" href="/assets/img/favicon.ico">
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
     <script defer src="/assets/js/bootstrap.bundle.min.js"></script>
     <script defer src="/assets/js/main.js"></script>
 </head>
