--- a/resources/views/home/index.twig
+++ b/resources/views/home/index.twig
@@ -11,4 +11,13 @@
             <h3>Hello {{ name }}</h3>
         </div>
     </div>
+
+    <div class="container">
+        <div class="box">1</div>
+        <div class="box">2</div>
+        <div class="box">3</div>
+    </div>
+
+
+
 {% endblock %}
