playing with js

--- a/resources/views/home/index.twig
+++ b/resources/views/home/index.twig
@@ -12,11 +12,44 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-    </div>
+    <ul>
+        <li>
+            <form>
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="submit" value="OK">
+            </form>
+            <button class="toggle-form">Open Form</button>
+        </li>
+        <li>
+            <form>
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="submit" value="OK">
+            </form>
+            <button class="toggle-form">Open Form</button>
+        </li>
+        <li>
+            <form>
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="submit" value="OK">
+            </form>
+            <button class="toggle-form">Open Form</button>
+        </li>
+        <li>
+            <form>
+                <input type="text">
+                <input type="text">
+                <input type="text">
+                <input type="submit" value="OK">
+            </form>
+            <button class="toggle-form">Open Form</button>
+        </li>
+    </ul>
 
 
 
